# perch-agile-modeling

./: .gitignore  404.html  LICENSE  README.md  agile_modeling.ipynb  environment.yml  generate_embeddings.ipynb  index.html  sitemap.xml
ARU_data/: Data
annotate/: index.html
assets/js/: 17896441.a66131b2.js  237.9f217ff2.js  2df1a691.d0f0b00c.js  3847b3ea.2c72ccaf.js  3847b3ea.6070b2df.js  3f4be94a.20fc9f4a.js  3f4be94a.2d1026f3.js  3f4be94a.e9f03b64.js  5e95c892.590642f1.js  6b50e60a.9713a845.js  78631f04.07124ae8.js  78631f04.27322a62.js  a7bd4aaa.e206ae97.js  a94703ab.95e7901c.js  aba21aa0.8a784112.js  b79705d4.4140fb8a.js  b79705d4.d31ff620.js  bb3a118c.79e4fa13.js  c377a04b.88018472.js  c377a04b.e4d86431.js  dc552e1d.9a7f72dd.js  main.47c2e56f.js  main.4b6b5c8d.js  main.93d92f3d.js  runtime~main.97703a71.js  runtime~main.c965543b.js  runtime~main.d68b2911.js  runtime~main.ed97f5c6.js
backend_utils/classify/: classify_script.py  run.sh
backend_utils/embed/: Dockerfile  embed_script.py  (+1 more)
classify/: index.html
embedding/: index.html
frontend-v2/: .prettierrc.yaml  deno.json  next.config.ts  package-lock.json  package.json  tailwind.config.ts
perch-agile-modeling-frontend/: .gitignore  next.config.mjs  package-lock.json  package.json
perch-analyzer/: .gitignore  pyproject.toml  rxconfig.py
perch-analyzer-docs/: README.md  docusaurus.config.ts
perch-analyzer/perch-analyzer-docs/: docusaurus.config.ts  package.json
perch-analyzer/perch-analyzer-docs/docs/: annotate.md  classify.md  embedding.md  index.md  search.md  setup.md  target_recordings.md  terminology.md
perch-analyzer/perch-analyzer-docs/static/: .gitkeep
perch-analyzer/scripts/: benchmark_db.py  benchmark_embed.py  transfer_to_new_hoplite.py
perch-analyzer/src/perch_analyzer/: cli.py
perch-analyzer/src/perch_analyzer/classify/: classifier.py  classifier_outputs.py  classify.py
perch-analyzer/src/perch_analyzer/config/: config.py  initialize_directory.py
perch-analyzer/src/perch_analyzer/db/: README.md  db.py  tables.py
perch-analyzer/src/perch_analyzer/embed/: embed.py
perch-analyzer/src/perch_analyzer/examine/: audio_windows.py  examine_annotations.py
perch-analyzer/src/perch_analyzer/gui/: annotate_page.py  classifier_output_page.py  classifiers_page.py  config_page.py  embed_page.py  examine_page.py  gui_loader.py  home_page.py  index.py  single_classifier_page.py  state.py  summary_page.py
perch-analyzer/src/perch_analyzer/search/: search.py
perch-analyzer/src/perch_analyzer/target_recordings/: audio_utils.py  signal.py  target_recordings.py  xenocanto.py
perch-analyzer/tests/: test_config.py
python_server/: .gitignore  app.py  classify_job.sh  embed_script.py  main.py  pyproject.toml  transfer_annotations.py
python_server/lib/: all_species_codes.py  auth.py  models.py
python_server/lib/db/: __init__.py  db.py
python_server/lib/perch_utils/: __init__.py  annotate.py  classify.py  embeddings.py  explore_annotations.py  legacy_labels.py  projects.py  search.py  signal.py  summary.py  target_recordings.py  usearch_hoplite.py
python_server/lib/perch_utils/tests/: test_perch_utils.py
python_server/tests/: test_perch_utils.py
search/: index.html
setup/: index.html
src/: agile_modeling.py  generate_embeddings.py
target_recordings/: index.html
terminology/: index.html
(+166 files in other folders)
