[project]
name = "perch-analyzer"
version = "0.1.0"
description = "Program to build bioacoustics classifiers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=6.3.0",
    "httpx>=0.28.1",
    "jax>=0.9.0",
    "perch-hoplite",
    "polars>=1.37.1",
    "pyarrow>=23.0.0",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "pyyaml>=6.0.3",
    "sqlalchemy>=2.0.46",
    "tensorflow>=2.20.0",
    "tqdm>=4.67.1",
]

[tool.uv.sources]
perch-hoplite = { git = "https://github.com/mschulist/perch-hoplite.git", rev = "0c15052bddf99429a2c0d95fc031e9d43f101758" }

[project.scripts]
perch-analyzer = "perch_analyzer.cli:main"
