[project]
name = "python-server"
version = "0.1.0"
description = "Server for Perch Agile Modeling"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=4.2.1",
    "fastapi[standard]>=0.115.5",
    "perch-hoplite",
    "jax>=0.4.35",
    "pyiceberg>=0.8.0",
    "pyjwt>=2.10.1",
    "pytest>=8.3.4",
    "scipy>=1.14.1",
    "sqlmodel>=0.0.22",
    "tqdm>=4.67.1",
    "jupyter-server>=2.17.0",
    "tensorflow>=2.20.0",
]

[tool.uv.sources]
perch-hoplite = { git = "https://github.com/google-research/perch-hoplite", rev = "e468adb45b6531e734649122bf7cf596527ce64e" }
